<?xml version="1.0"?>
<package>
  <name>ros2-imu-bno055</name>
  <version>1.0.0</version>
  <description>I2C driver for a BNO055 IMU. Tested on Jetson TX2.</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
