<?xml version="1.0"?>
<package format="3">
  <name>imu</name>
  <version>1.0.0</version>
  <description>I2C driver for a BNO055 IMU. Tested on Jetson TX2.</description>
  <maintainer email="novaroverteam@monash.edu">Monash Nova Rover</maintainer>
  <license>Only for Monash Nova Rover Team to use and distribute.</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
